# dotfiles

./: aider.conf.yml  bashrc  gdbinit  gitconfig  pypirc  setup.sh  tmux.conf  xprofile  zshenv  zshrc
config/Code/User/: keybindings.json  settings.json
config/Cursor/User/: keybindings.json  settings.json
config/alacritty/: alacritty.toml  alacritty.yml
config/autostart/: lantern.desktop
config/emacs/: init.el
config/emacs/site-lisps/: setup-hydras.el  setup-org.el  setup-packages.el  setup-prog.el
config/fcitx5/conf/: classicui.conf
config/fontconfig/: fonts.conf
config/git/: config
config/go/: env
config/gtk-3.0/: gtk.css  settings.ini
config/i3/: config  startup.sh
config/i3status/: config
config/i3status-rust/: config.toml
config/lxterminal/: lxterminal.conf
config/nvim/: init.lua  init.vim
config/pip/: pip.conf
config/procps/: toprc
config/pudb/: pudb.cfg
config/qt5ct/: qt5ct.conf
config/qt6ct/: qt6ct.conf
config/radare2/: radare2rc
config/ripgrep/: ripgreprc
config/rofi/: config.rasi
config/tmux/: tmux.conf
config/try/: config.ini
config/ulauncher/: settings.json  shortcuts.json
config/yay/: config.json
config/zathura/: zathurarc
emacs.d/: .gitignore  init.el
emacs.d/site-lisps/: setup-cc.el  setup-el-get.el  setup-go.el  setup-hydras.el  setup-java.el  setup-lisp.el  setup-org.el  setup-packages.el  setup-prog.el  setup-python.el  setup-scala.el  setup-tex.el  setup-tools.el  setup-web.el
local/share/virtualenv/daily/: pyproject.toml
ssh/: config
vim/: .gitignore  vimrc
(+10 files in other folders)
